--- a/covid.html
+++ b/covid.html
@@ -34,10 +34,24 @@
     </nav>
     <main>
       <article>
-        <p id="panorama">
-          Als besonderes Schmankerl präsentieren wir Ihnen ein exklusives
-          Panoramafoto unseres Savannenbereichs im Zoo!
-        </p>
+        <div class="covid">
+          <h3>Coronavirus - Maßnahmen</h3>
+          <p>
+            Liebe Zoobesucher!<br />
+            Aufgrund der aktuellen Situation ersuchen wir Sie, folgende
+            Maßnahmen einzuhalten:
+          </p>
+          <ul>
+            <li>Abstand von mind. 1m einhalten</li>
+            <li>
+              Bei der Kasse sowie beim Buffet ist ein Mundschutz zu tragen
+            </li>
+            <li>
+              Wenn Sie sich nicht gesund fühlen verzichten Sie bitte auf einen
+              Besuch
+            </li>
+          </ul>
+        </div>
       </article>
       <article>
         <p>Bis bald im <strong>Tierpark Entenhausen</strong>!</p>
