--- a/covid.html
+++ b/covid.html
@@ -13,14 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap"
       rel="stylesheet"
     />
-    <title>Tierpark Entenhausen - Home</title>
+    <title>Tierpark Entenhausen - Coronavirus</title>
   </head>
   <body>
     <header>
       <h1>
-        <a href="index.html"
-          >Tierpark Entenhausen - Schauen Sie doch mal rein!</a
-        >
+        <a href="index.html">Tierpark Entenhausen - Herzlich willkommen!</a>
       </h1>
     </header>
     <nav>
